--- a/index.html
+++ b/index.html
@@ -6,9 +6,24 @@
 -->
 <html>
 	<head>
-		<title>Prologue by HTML5 UP</title>
+		<title>Kyungrae Kim Portfolio</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
+		<link rel="stylesheet" href="assets/css/reset.css" />
+		<link rel="stylesheet" href="assets/css/base.css" />
+		<link rel="stylesheet" href="assets/css/layout.css" />
+		<link rel="stylesheet" href="assets/css/modules/module-main.css" />
+		<link rel="stylesheet" href="assets/css/modules/module-header.css" />
+		<link rel="stylesheet" href="assets/css/modules/module-image.css" />
+		<link rel="stylesheet" href="assets/css/modules/module-table.css" />
+		<link rel="stylesheet" href="assets/css/modules/module-button.css" />
+		<link rel="stylesheet" href="assets/css/modules/module-icon.css" />
+		<link rel="stylesheet" href="assets/css/modules/module-icons.css" />
+		<link rel="stylesheet" href="assets/css/modules/module-item.css" />
+		<link rel="stylesheet" href="assets/css/modules/module-list.css" />
+		<link rel="stylesheet" href="assets/css/modules/module-section-article.css" />
+		<link rel="stylesheet" href="assets/css/modules/module-form.css" />
+		<link rel="stylesheet" href="assets/css/modules/module-footer.css" />
 		<link rel="stylesheet" href="assets/css/main.css" />
 	</head>
 	<body class="is-preload">
@@ -21,8 +36,8 @@
 					<!-- Logo -->
 						<div id="logo">
 							<span class="image avatar48"><img src="images/avatar.jpg" alt="" /></span>
-							<h1 id="title">Jane Doe</h1>
-							<p>Hyperspace Engineer</p>
+							<h1 id="title">Kyungrae Kim</h1>
+							<p>Software Developer</p>
 						</div>
 
 					<!-- Nav -->
@@ -41,11 +56,11 @@
 
 					<!-- Social Icons -->
 						<ul class="icons">
-							<li><a href="#" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
-							<li><a href="#" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
-							<li><a href="#" class="icon fa-github"><span class="label">Github</span></a></li>
-							<li><a href="#" class="icon fa-dribbble"><span class="label">Dribbble</span></a></li>
-							<li><a href="#" class="icon fa-envelope"><span class="label">Email</span></a></li>
+							<!-- <li><a href="#" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
+							<li><a href="#" class="icon fa-facebook"><span class="label">Facebook</span></a></li> -->
+							<li><a href="https://github.com/jeremymaya" class="icon fa-github"><span class="label">Github</span></a></li>
+							<!-- <li><a href="#" class="icon fa-dribbble"><span class="label">Dribbble</span></a></li> -->
+							<li><a href="jeremiah.kim@hotmail.com" class="icon fa-envelope"><span class="label">Email</span></a></li>
 						</ul>
 
 				</div>
@@ -60,14 +75,14 @@
 						<div class="container">
 
 							<header>
-								<h2 class="alt">Hi! I'm <strong>Prologue</strong>, a <a href="http://html5up.net/license">free</a> responsive<br />
-								site template designed by <a href="http://html5up.net">HTML5 UP</a>.</h2>
-								<p>Ligula scelerisque justo sem accumsan diam quis<br />
-								vitae natoque dictum sollicitudin elementum.</p>
+								<h2 class="alt">Hi! I'm <strong>Kyungrae</strong>, a front-end software developer.<br />
+								Nice to meet you!</h2>
+								<p>I am a software developer :D<br />
+								and I only have 1 hour left with the lab 04!</p>
 							</header>
 
 							<footer>
-								<a href="#portfolio" class="button scrolly">Magna Aliquam</a>
+								<a href="#portfolio" class="button scrolly">More About Me</a>
 							</footer>
 
 						</div>
