--- a/index.html
+++ b/index.html
@@ -12,19 +12,19 @@
 		<link rel="stylesheet" href="assets/css/reset.css" />
 		<link rel="stylesheet" href="assets/css/base.css" />
 		<link rel="stylesheet" href="assets/css/layout.css" />
-		<link rel="stylesheet" href="assets/css/modules/module-main.css" />
-		<link rel="stylesheet" href="assets/css/modules/module-header.css" />
+		<link rel="stylesheet" href="assets/css/modules/module-section-article.css" />
 		<link rel="stylesheet" href="assets/css/modules/module-image.css" />
+		<link rel="stylesheet" href="assets/css/modules/module-list.css" />
+		<link rel="stylesheet" href="assets/css/modules/module-icon.css" />
+		<link rel="stylesheet" href="assets/css/modules/module-form.css" />
 		<link rel="stylesheet" href="assets/css/modules/module-table.css" />
 		<link rel="stylesheet" href="assets/css/modules/module-button.css" />
-		<link rel="stylesheet" href="assets/css/modules/module-icon.css" />
-		<link rel="stylesheet" href="assets/css/modules/module-icons.css" />
 		<link rel="stylesheet" href="assets/css/modules/module-item.css" />
-		<link rel="stylesheet" href="assets/css/modules/module-list.css" />
-		<link rel="stylesheet" href="assets/css/modules/module-section-article.css" />
-		<link rel="stylesheet" href="assets/css/modules/module-form.css" />
+		<link rel="stylesheet" href="assets/css/modules/module-icons.css" />
+		<link rel="stylesheet" href="assets/css/modules/module-header.css" />
 		<link rel="stylesheet" href="assets/css/modules/module-footer.css" />
-		<link rel="stylesheet" href="assets/css/main.css" />
+		<link rel="stylesheet" href="assets/css/modules/module-main.css" />
+		<!-- <link rel="stylesheet" href="assets/css/main.css" /> -->
 	</head>
 	<body class="is-preload">
 
